redesign admin operations experience
